--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
-  },  
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.3",
+    "sequelize-cli": "^6.5.1"
+  },
   "devDependencies": {
     "nodemon": "^2.0.20"
   }
